@@ -1,3 +1,7 @@
+2010-06-17  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14770: htmlArea RTE: Abbreviation dialogue not always correctly initialized
+
 2010-06-16  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14567: htmlArea RTE: RTE is greyed out and has no "styles" in page module QuickEdit
